<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VehicleInput"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:boxStrokeColor="@color/purple_500">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ModelIN"
                android:layout_width="match_parent"
                android:hint="@string/model"
                android:inputType="text"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp"
            android:weightSum="100"
            >
        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="wrap_content"
            android:text="Type : "
            android:textSize="20sp"

            android:textColor="@color/black"
            />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="75"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/car_id"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="Car" />

            <RadioButton
                android:id="@+id/bike_id"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:text="Bike" />
        </RadioGroup>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:boxStrokeColor="@color/purple_500">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_numIN"
                android:layout_width="match_parent"
                android:hint="@string/registration_number"
                android:inputType="text"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="ADD" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical"
        >
        <ListView
            android:id="@+id/vehicle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            android:divider="@android:color/transparent"
            android:dividerHeight="10.0sp"
            style="?android:attr/spinnerItemStyle"
            android:layout_margin="10sp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/next2"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>